# longfi-device

./: .clang-format  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  board.c  board.h  doxyfile  longfi.c  longfi.h  longfiP.h  toolchain-gcc-arm-none-eabi.cmake  toolchain-gcc-xtensa-esp32.cmake
docs/: CMakeLists.txt  Doxyfile.in
radio/: CMakeLists.txt  gitcommit-LoRaMAC-node.txt  radio.h  sx1276-board.h
radio/sx126x/: radio.c  sx126x-board.c  sx126x-board.h  sx126x.c  sx126x.h
radio/sx1272/: sx1272-board.c  sx1272-board.h  sx1272.c  sx1272.h  sx1272Regs-Fsk.h  sx1272Regs-LoRa.h
radio/sx1276/: sx1276-board.c  sx1276-board.h  sx1276.c  sx1276.h  sx1276Regs-Fsk.h  sx1276Regs-LoRa.h
src/: lib.rs
tests/: AllTests.cpp  LongFiSuite.cpp  Makefile  RadioSuite.cpp  SX1276Suite.cpp  board.d  longfi.d  mock-radio.h  radio-board.c  radio-board.h
tests/radio/sx126x/: radio.d  sx126x-board.d  sx126x.d
tests/radio/sx1276/: sx1276-board.d  sx1276.d
tests/tests/: AllTests.d  LongFiSuite.d  RadioSuite.d  radio-board.d
